[package]
name = "elkm1-cli"
version = "0.0.1"
edition = "2021"
publish = false
repository = "https://github.com/scottlamb/elkm1"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
clap = { version = "3.0.14", features = ["derive"] }
elkm1 = { path = "../elkm1", features = ["tokio"] }
env_logger = "0.9.0"
futures = "0.3.14"
log = "0.4.14"
pretty-hex = "0.2.1"
tokio = { version = "1.16.1", features = ["macros", "rt"] }
