[package]
name = "elkm1-cli"
version = "0.0.1"
edition = "2024"
publish = false
repository = "https://github.com/scottlamb/elkm1"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
clap = { version = "4.0", features = ["derive"] }
elkm1 = { path = "../elkm1", features = ["tokio"] }
futures = "0.3.14"
pretty-hex.workspace = true
jiff.workspace = true
tokio = { version = "1.16.1", features = ["macros", "rt"] }
tracing = "0.1.37"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
