[package]
name = "elkm1-mqtt"
version = "0.0.1"
edition = "2021"
publish = false
repository = "https://github.com/scottlamb/elkm1"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
elkm1 = { path = "../elkm1", features = ["serde", "tokio"] }
futures = "0.3.14"
rumqttc = "0.10.0"
serde = { version  = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
time = { version = "0.3.20", features = ["local-offset"] }
tokio = { version = "1.16.1", features = ["macros", "rt", "sync"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "local-time"] }
